helm/src/whoami/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: whoami
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.mervinhemaraju.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`whoami.mervinhemaraju.com`)
      services:
        - name: whoami
          port: 80
  tls:
    certResolver: le
